objects/Marketing_Tracking__c.object
<CustomObject>
    <description>KF(20130716) Custom Object to bring in yearly Marketing Expense Tracking</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Trackings</relationshipLabel>
        <relationshipName>Marketing_Trackings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Communication_Sum_Amount__c</fullName>
        <label>Active Communication Sum Amount</label>
        <summarizedField>Marketing_Project__c.Cost_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Project__c.MarketingExpense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Allocated_Communication_Allowance_Start__c</fullName>
        <description>Amount entered by Underwriter, this represents the communication portion of the starting balance.</description>
        <inlineHelpText>Amount entered by Underwriter, this represents the communication portion of the starting balance, for the year.</inlineHelpText>
        <label>Allocated Communication Allowance Start</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branding__c</fullName>
        <formula>TEXT( Account__r.Branding__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Communication_Sum_Amount__c</fullName>
        <label>Completed Communication Sum Amount</label>
        <summarizedField>Marketing_Project__c.Cost_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Project__c.MarketingExpense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed_Other_Sum_Amt_Audit_Imp__c</fullName>
        <description>Underwriting field to record non-marketing activity such as implementation and audit credits</description>
        <inlineHelpText>Underwriting field to record non-marketing activity such as implementation and audit credits</inlineHelpText>
        <label>Completed &apos;Other&apos; Sum Amt -Audit, Imp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funded_By__c</fullName>
        <label>Funded By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>403371 Wellness Expense (included in the rates – FI only)</fullName>
                </value>
                <value>
                    <fullName>450115 Wellness Expense (included in the rates – ASO only)</fullName>
                </value>
                <value>
                    <fullName>606020 Wellness Expense – not included in the rates FI and ASO</fullName>
                </value>
                <value>
                    <fullName>620010 Communication Expense – Marketing/Collateral Printing</fullName>
                </value>
                <value>
                    <fullName>620010 Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>TEXT(Account__r.Group_Size__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_in_the_rates__c</fullName>
        <label>Included In The Rates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>LG Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Implementation Allowance (UC) First Yr Only</fullName>
                </value>
                <value>
                    <fullName>Marketing Communication Dollars</fullName>
                </value>
                <value>
                    <fullName>OE Credit</fullName>
                </value>
                <value>
                    <fullName>Offset - Dental</fullName>
                </value>
                <value>
                    <fullName>Offset - Medical</fullName>
                </value>
                <value>
                    <fullName>Offset- Vision</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rate Bank</fullName>
                </value>
                <value>
                    <fullName>Survey Allowance (UC)</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>Wellness Allowance (UC)</fullName>
                </value>
                <value>
                    <fullName>Wellness Credit</fullName>
                </value>
                <value>
                    <fullName>Wellness Dollars</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Required When Other Payment Type is Selected</inlineHelpText>
        <label>Other Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Credit to Group</fullName>
                </value>
                <value>
                    <fullName>Check to Group</fullName>
                </value>
                <value>
                    <fullName>Check to Consultant</fullName>
                </value>
                <value>
                    <fullName>Check to 3rd party vendor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Renewal__c</fullName>
        <label>Proposal/Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Account__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Marketing_Manager__c</fullName>
        <label>Regional Marketing Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amy Miller</fullName>
                </value>
                <value>
                    <fullName>Chelsea Avery</fullName>
                </value>
                <value>
                    <fullName>Dawn Wheeler</fullName>
                </value>
                <value>
                    <fullName>Ginny Hollingsworth</fullName>
                </value>
                <value>
                    <fullName>Jennifer Cielusniak</fullName>
                </value>
                <value>
                    <fullName>Jenny Drapp</fullName>
                </value>
                <value>
                    <fullName>Jessica Shafer</fullName>
                </value>
                <value>
                    <fullName>Jill Missler</fullName>
                </value>
                <value>
                    <fullName>Kim Dickey</fullName>
                </value>
                <value>
                    <fullName>Kristen Hellman</fullName>
                </value>
                <value>
                    <fullName>Meredith Voisin</fullName>
                </value>
                <value>
                    <fullName>Michael Fillhardt</fullName>
                </value>
                <value>
                    <fullName>Rebecca Rupp</fullName>
                </value>
                <value>
                    <fullName>Stacey Sam</fullName>
                </value>
                <value>
                    <fullName>Anny Irons</fullName>
                </value>
                <value>
                    <fullName>Jan Clermont</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Offered</fullName>
                </value>
                <value>
                    <fullName>Not Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fund_Remaining_Balance__c</fullName>
        <formula>IF(

TEXT(Account__r.Situs_State__c) = &quot;California&quot;,
(Total_Fund_Starting_Balance__c  - (  Completed_Other_Sum_Amt_Audit_Imp__c  +  Active_Communication_Sum_Amount__c  +  Completed_Communication_Sum_Amount__c + Total_Invoiced_Amount__c )),


IF( 

Total_Fund_Starting_Balance__c - ( Completed_Other_Sum_Amt_Audit_Imp__c + Active_Communication_Sum_Amount__c + Completed_Communication_Sum_Amount__c ) &gt; - 0.01, 
( Total_Fund_Starting_Balance__c - ( Completed_Other_Sum_Amt_Audit_Imp__c + Active_Communication_Sum_Amount__c + Completed_Communication_Sum_Amount__c )),
-0.01 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Balance must be equal to or greater than 0.</inlineHelpText>
        <label>Total Fund Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fund_Starting_Balance__c</fullName>
        <description>Entered by Underwriter, this is the entire marketing balance for the year.</description>
        <inlineHelpText>Entered by Underwriter, this is the entire marketing balance for the year.</inlineHelpText>
        <label>Total Fund Starting Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced_Amount__c</fullName>
        <label>Total Invoiced Amount</label>
        <summarizedField>Marketing_Project__c.Invoiced_Amount__c</summarizedField>
        <summaryForeignKey>Marketing_Project__c.MarketingExpense__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_Communication_Allowance__c</fullName>
        <formula>IF( (Allocated_Communication_Allowance_Start__c  -  Active_Communication_Sum_Amount__c  -  Completed_Communication_Sum_Amount__c ) &gt;  Total_Fund_Remaining_Balance__c , Total_Fund_Remaining_Balance__c,  Allocated_Communication_Allowance_Start__c  - Active_Communication_Sum_Amount__c -  Completed_Communication_Sum_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Remaining Communication Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <formula>Account__r.Underwriter__r.FirstName &amp;&quot; &quot;&amp;  Account__r.Underwriter__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Underwriter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_First_Month_Premium__c</fullName>
        <label>% of First Month Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Marketing Tracking</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketing Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ANA_VR_MT01_MarketingTracking</fullName>
        <active>true</active>
        <description>Require Other Comments when Pickval = Other</description>
        <errorConditionFormula>AND( !$User.BypassValidation__c ,ISPICKVAL(Payment_Type__c,&quot;Other&quot;) &amp;&amp; ISBLANK( Other_Comments__c ))</errorConditionFormula>
        <errorDisplayField>Other_Comments__c</errorDisplayField>
        <errorMessage>Other Comments are required when Payment Type selected is Other.</errorMessage>
    </validationRules>
</CustomObject>